# lite-agent

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  linux-sandbox.yml  linux.yml
examples/repl/: Cargo.toml
examples/repl/src/: main.rs
lite-agent-core/: Cargo.toml
lite-agent-core/src/: agent_loop.rs  context.rs  error.rs  events.rs  functions.rs  lib.rs  model.rs  projection.rs  store.rs
lite-agent-kernel/: Cargo.toml
lite-agent-kernel/src/: events.rs  lib.rs  model.rs  projection.rs  revision.rs
lite-agent-observability/: Cargo.toml
lite-agent-observability/src/: jsonl_collector.rs  lib.rs  logging.rs
lite-agent-openai/: Cargo.toml
lite-agent-openai/src/: lib.rs  model.rs
lite-agent-runtime/: Cargo.toml
lite-agent-runtime/src/: agent_loop.rs  context.rs  error.rs  functions.rs  lib.rs  model.rs  session.rs  store.rs  trace.rs
lite-agent-store-json/: Cargo.toml
lite-agent-store-json/src/: lib.rs  store.rs
lite-agent-tools/: Cargo.toml
lite-agent-tools-native/: Cargo.toml
lite-agent-tools-native/src/: lib.rs  linux.rs  seatbelt.rs
lite-agent-tools/src/: exec_command.rs  lib.rs
lite-agent-tools/src/sandbox/: linux.rs  mod.rs  seatbelt.rs
src/: agent_loop.rs  error.rs  events.rs  functions.rs  lib.rs  logging.rs  main.rs  model.rs  projection.rs  store.rs
