[package]
name = "lite-agent-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
lite-agent-kernel = { path = "../lite-agent-kernel" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "io-std", "io-util", "sync", "time"] }
tracing = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tempfile = "3"
