[package]
name = "lite-agent-store-json"
version = "0.1.0"
edition = "2021"

[dependencies]
lite-agent-kernel = { path = "../lite-agent-kernel" }
lite-agent-runtime = { path = "../lite-agent-runtime" }
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "sync"] }

[dev-dependencies]
tempfile = "3"
