[package]
name = "lite-agent-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
lite-agent-runtime = { path = "../lite-agent-runtime" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde_json = "1"

[dev-dependencies]
lite-agent-kernel = { path = "../lite-agent-kernel" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
