[package]
name = "lite-agent-repl"
version = "0.1.0"
edition = "2021"

[dependencies]
lite-agent-kernel = { path = "../../lite-agent-kernel" }
lite-agent-runtime = { path = "../../lite-agent-runtime" }
lite-agent-openai = { path = "../../lite-agent-openai" }
lite-agent-store-json = { path = "../../lite-agent-store-json" }
lite-agent-observability = { path = "../../lite-agent-observability" }
rustyline = "18.0.1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "io-std", "io-util", "signal", "time"] }
